Fix css grid on mobile

--- a/src/pages/archive/Archive.scss
+++ b/src/pages/archive/Archive.scss
@@ -59,6 +59,7 @@
     @media screen and (max-width: $breakpoint-resume) {
       padding: 0;
       background: none;
+      font-size: .5rem;
     }
   }
 }
