--- a/src/pages/experiments/Experiments.scss
+++ b/src/pages/experiments/Experiments.scss
@@ -2,13 +2,16 @@
 
 .Experiments {
   position: relative;
+  width: 100%;
+  height: 100%;
 
   &__grid {
     display: grid;
-    grid-template-columns: repeat(3, 20rem);
-    grid-gap: 10px;
+    grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr));
     grid-auto-rows: minmax(100px, 200px);
+    grid-gap: 1rem;
     max-width: 60rem;
+    width: 100%;
   }
 }
 
